completed test for ElevatorSelection